Fix text alignment in feature cards

--- a/css/guide.css
+++ b/css/guide.css
@@ -305,6 +305,7 @@
 .feature-content {
     padding: 30px;
     width: 100%;
+    text-align: left;
 }
 
 .feature-title {
